# self_destructor

./: Cargo.toml  README.md  build.rs
src/: execute_counter.rs  lib.rs  main.rs  rewriter.rs
