[package]
name = "self_destructor"
version = "0.1.0"
authors = ["q9good <psnyima@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"